--- a/.github/workflows/texlive.yml
+++ b/.github/workflows/texlive.yml
@@ -1,4 +1,4 @@
-name: Automated testing for enumext package (TL2024 -2025)
+name: Automated testing for enumext package (TL2025)
 
 on:
   push:
@@ -16,7 +16,6 @@ jobs:
     strategy:
       matrix:
         version:
-          - 2024
           - 2025
         command:
           - doc
